--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "stimulus": "^1.1.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.14.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
