--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "stimulus": "^1.1.1",
     "sweetalert": "^2.1.2",
